--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 	<body>
 		<nav class="navbar-fixed-top">
 		    <ul class="nav navbar-nav">
-		      <li class="active"><a href="home.html">Home</a></li>
+		      <li class="active"><a href="index.html">Home</a></li>
 		      <li><a href="about.html">About</a></li>
 		      <li><a href="projects.html">Projects</a></li> 
 		      <li><a href="notes.html">Notes</a></li> 
