--- a/resume.html
+++ b/resume.html
@@ -14,11 +14,11 @@
 	<body>
 		<nav class="navbar-fixed-top">
 		    <ul class="nav navbar-nav">
-		      <li><a href="home.html">Home</a></li>
-		      <li><a href="about.html">About</a></li>
-		      <li><a href="projects.html">Projects</a></li> 
-		      <li><a href="notes.html">Notes</a></li> 
-		      <li class="active"><a href="resume.html">Resume</a></li> 
+		      <li><a href="index">Home</a></li>
+		      <li><a href="about">About</a></li>
+		      <li><a href="projects">Projects</a></li> 
+		      <li><a href="notes">Notes</a></li> 
+		      <li class="active"><a href="resume">Resume</a></li> 
 		    </ul>
 		    <ul class="nav navbar-nav navbar-right">
 		      <li><a href="https://github.com/nairboh"><i class="fa fa-github" aria-hidden="true"></i></a></li>
