Added image, headers, footers, about page content

--- a/index.html
+++ b/index.html
@@ -25,5 +25,12 @@
 		      <li><a href="https://www.linkedin.com/in/nairboh"><i class="fa fa-linkedin-square" aria-hidden="true"></i></a></li>
 		    </ul>
 		</nav>
+		<img class="image" src="res/pic.jpg">
+		<h1>Brian Ho | Aspiring Software Engineer</h1>
+		
 	</body>
+	
+	<footer class="navbar navbar-fixed-bottom">
+		<p>&copy Brian Ho 2016</p>
+	</footer>
 </html>
