--- a/projects.html
+++ b/projects.html
@@ -26,4 +26,8 @@
 		    </ul>
 		</nav>
 	</body>
+
+	<footer class="navbar navbar-fixed-bottom">
+		<p>&copy Brian Ho 2016</p>
+	</footer>
 </html>
