Changed titles of pages, added temp filler for notes page

--- a/notes.html
+++ b/notes.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		<title>Brian Ho | Home</title>
+		<title>Brian Ho | Notes</title>
 		<link href="https://fonts.googleapis.com/css?family=Roboto:300" rel="stylesheet">
 		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
 		<link rel="stylesheet" href="css/global.css">
@@ -25,5 +25,11 @@
 		      <li><a href="https://www.linkedin.com/in/nairboh"><i class="fa fa-linkedin-square" aria-hidden="true"></i></a></li>
 		    </ul>
 		</nav>
+
+		<h1><br>Nothing here at the moment, please check back later! :)</h1>
 	</body>
+
+	<footer class="navbar navbar-fixed-bottom">
+		<p>&copy Brian Ho 2016</p>
+	</footer>
 </html>
