--- a/resume.html
+++ b/resume.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		<title>Brian Ho | Home</title>
+		<title>Brian Ho | Resume</title>
 		<link href="https://fonts.googleapis.com/css?family=Roboto:300" rel="stylesheet">
 		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
 		<link rel="stylesheet" href="css/global.css">
@@ -26,4 +26,8 @@
 		    </ul>
 		</nav>
 	</body>
+
+	<footer class="navbar navbar-fixed-bottom">
+		<p>&copy Brian Ho 2016</p>
+	</footer>
 </html>
