Linked and added resume

--- a/resume.html
+++ b/resume.html
@@ -25,6 +25,8 @@
 		      <li><a href="https://www.linkedin.com/in/nairboh"><i class="fa fa-linkedin-square" aria-hidden="true"></i></a></li>
 		    </ul>
 		</nav>
+
+		<embed width="100%" height="1000" src="docs/resume.pdf" type="application/pdf"></embed>
 	</body>
 
 	<footer class="navbar navbar-fixed-bottom">
