--- a/projects.html
+++ b/projects.html
@@ -18,7 +18,7 @@
 		      <li><a href="about">About</a></li>
 		      <li class="active"><a href="projects">Projects</a></li> 
 		      <li><a href="notes">Notes</a></li> 
-		      <li><a href="resume">Resume</a></li> 
+		      <li><a href="docs/resume.pdf">Resume</a></li> 
 		    </ul>
 		    <ul class="nav navbar-nav navbar-right">
 		      <li><a href="https://github.com/nairboh"><i class="fa fa-github" aria-hidden="true"></i></a></li>
