--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
 		      <li><a href="docs/resume.pdf">Resume</a></li> 
 		    </ul>
 		    <ul class="nav navbar-nav navbar-right">
+		      <li><a href="mailto:briankyho@gmail.com"><i class="fa fa-envelope" aria-hidden="true"></i></a></li>
 		      <li><a href="https://github.com/nairboh"><i class="fa fa-github" aria-hidden="true"></i></a></li>
 		      <li><a href="https://www.linkedin.com/in/nairboh"><i class="fa fa-linkedin-square" aria-hidden="true"></i></a></li>
 		    </ul>
