--- a/about.html
+++ b/about.html
@@ -30,12 +30,12 @@
 		<div class="container">
 			<h1>A little bit about me!</h1>
 			<h3 class="about">
-				Hi there! My name is Brian, and I am an aspiring Software Engineer studying at the University of Waterloo! I chose Software Engineering to be my major because ever since I was little, I have always been marveled at how computers worked, and how the operations behind each applications were handled. However, it was not until entering high school that I realized that I fully realized my love for programming. The robotics program at my high school coincidentally started with I was in my grade 9 year. It is there that I met people whom I am still friends with today. They all decided to join the programming division of our new FIRST Robotics Team. It was there I learned my love for programming. I had been an average student in elementary school with an interest in technology, but after meeting with people who had similar goals to myself, my interest in mathematics, science, and computer science increased dramatically, my interests in these programs allowed me to achieve a very high average. This complemented with my experience on my school's robotics team is what I had described in my application to University of Waterloo!
+				Hi there! My name is Brian, and I am an aspiring Software Engineer studying at the University of Waterloo! I chose Software Engineering to be my major because ever since I was little, I have always been marveled at how computers worked, and how the operations behind each applications were handled.
 			</h3>
 
 			<h1>Hobbies and Interests</h1>
 			<h3 class="about">
-				For social activities, I enjoy hanging out with friends, and going out to eat, or working on a project together! For athletic activities I enjoy running, badminton, ping pong, and swimming! Finally, on my spare time, I like learning new things, so I have joined the robot racing design team in my university to meet new people and learn some new skills!
+				For social activities, I enjoy hanging out with friends, and going out to eat, or working on a project together! For athletic activities I enjoy running, badminton, ping pong, and swimming!
 
 	 		</h3>
 	 	</div>
