--- a/projects.html
+++ b/projects.html
@@ -43,7 +43,16 @@
 				      <img src="res/MAYO_thumb.jpg" alt="...">
 				      <div class="caption">
 				        <h3>Mayo</h3>
-				        <p><a href="#" class="btn btn-default" role="button">View Project</a></p>
+				        <p><a href="https://github.com/nairboh/Mayo/blob/master/README.md" class="btn btn-default" role="button">View Project</a></p>
+				      </div>
+				    </div>
+			  	</div>
+			  	<div class="col-sm-6 col-md-4">
+				    <div class="thumbnail projects">
+				      <img src="res/LOD_thumb.png" alt="...">
+				      <div class="caption">
+				        <h3>Life Or Death</h3>
+				        <p><a href="https://github.com/nairboh/LifeOrDeath/blob/master/README.md" class="btn btn-default" role="button">View Project</a></p>
 				      </div>
 				    </div>
 			  	</div>
