--- a/projects.html
+++ b/projects.html
@@ -58,7 +58,7 @@
 			  	</div>
 			  	<div class="col-sm-6 col-md-4">
 				    <div class="thumbnail projects">
-				      <img src="res/LOD_thumb.png" alt="...">
+				      <img src="res/tetris.png" alt="...">
 				      <div class="caption">
 				        <h3>Tetromino Simulator</h3>
 				        <p><a href="#" class="btn btn-default" role="button">View Project</a></p>
