--- a/projects.html
+++ b/projects.html
@@ -34,7 +34,7 @@
 				      <img src="res/SA_thumb.png" alt="...">
 				      <div class="caption">
 				        <h3>SuperAutomator</h3>
-				        <p><a href="#" class="btn btn-default" role="button">View Project</a></p>
+				        <p><a href="https://github.com/nairboh/SuperAutomator/blob/master/README.md" class="btn btn-default" role="button">View Project</a></p>
 				      </div>
 				    </div>
 			  	</div>
