--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 		      <li><a href="https://www.linkedin.com/in/nairboh"><i class="fa fa-linkedin-square" aria-hidden="true"></i></a></li>
 		    </ul>
 		</nav>
-<!-- 		<img class="image" src="res/pic.jpg"> -->
+		<img class="image" src="res/pic.jpg">
 		<h1>Brian Ho | Aspiring Software Engineer</h1>
 		
 	</body>
